# structrock

./: .gitignore  CMakeLists.txt  FindPostgreSQL.cmake  KinectV2Viewer.h  LICENSE  LagrangeTensorWorker.cpp  LagrangeTensorWorker.h  Miniball.hpp  MultiInputDialog.cpp  MultiInputDialog.h  MultiStationWorker.cpp  MultiStationWorker.h  MyThread.h  README.md  RGSWorker.cpp  RGSWorker.h  ReadFileWorker.cpp  ReadFileWorker.h  ReadPolygonMeshWorker.cpp  ReadPolygonMeshWorker.h  ReadXYZWorker.cpp  ReadXYZWorker.h  ReadnShowClassesWorker.cpp  ReadnShowClassesWorker.h  SaveClustersWorker.cpp  SaveClustersWorker.h  SaveMeshWorker.cpp  SaveMeshWorker.h  SaveNormalsWorker.cpp  SaveNormalsWorker.h  SavePcdASCIIWorker.cpp  SavePcdASCIIWorker.h  SavePcdBinaryWorker.cpp  SavePcdBinaryWorker.h  SavePolygonMeshWorker.cpp  SavePolygonMeshWorker.h  SaveTraceMapWorker.cpp  SaveTraceMapWorker.h  ShearParaWorker.cpp  ShearParaWorker.h  (+47 more)
doc/: doc.md  doc.txt
wiki/img/: Thumbs.db
